# Opcodes

./: MANIFEST.in  README.md  pyproject.toml  readme.rst  setup.py
.github/workflows/: encoding-validation.yaml  python-ci.yml  xml-validation.yml
examples/: to_csv.py
opcodes/: k1om.py  k1om.xml  x86.py  x86.xml  x86.xsd  x86_64.py  x86_64.xml  x86_64.xsd
test/: test_k1om.py  test_x86.py  test_x86_64.py
